--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
     <title>Education Website</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav_logo"><a href="#">Leraning</a></div>
+        <ul class="nav_links">
+            <li class="link"><a href="#">Home</a></li>
+            <li class="link"><a href="#">About us</a></li>
+            <li class="link"><a href="#">Services</a></li>
+            <li class="link"><a href="#">Courses</a></li>
+            <li class="link"><a href="#">Blogs</a></li>
+            <li class="link"><a href="#" class="nav_btn">Register</a></li>
+        </ul>
+    </nav>
+    <section class="container">
+        <div class="content_container">
+            <h1>
+                Best Learning<br />
+                <span class="heading_1">Education Platform</span><br />
+                <span class="heading_2">For Better Future</span>
+            </h1>
+            <p>
+                Unlock your full learning potential with our intuitive education
+          platform. Seamlessly blending technology and education, we provide an
+          immersive learning environment that combines interactive lessons,
+          virtual classrooms, and intelligent feedback.
+            </p>
+            <form>
+                <input type="text" placeholder="What do you want to learn" />
+                <button type="submit">Search Subjects</button>
+            </form>
+            <div class="image_container">
+                <img src="assets/header-1.jpg" alt="header" />
+                <img src="assets/header-2.jpg" alt="header" />
+                <div class="image_content">
+                    <ul>
+                        <li>Get 30% off on every 1st month</li>
+                        <li>Expert Teachers</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
